fixed notifications not showing up when deleting domains/users

--- a/src/components/addDomainModal/addDomainModal.scss
+++ b/src/components/addDomainModal/addDomainModal.scss
@@ -30,21 +30,11 @@
   color: $clr-white !important;
   font-size: 14px;
 
-  &:hover {
-    background-color: mix($clr-black, $clr-hero, 10%) !important;
-    color: mix($clr-black, $clr-white, 10%) !important;
-  }
-
-  &:active {
-    background-color: mix($clr-black, $clr-hero, 20%) !important;
-    color: mix($clr-black, $clr-white, 20%) !important;
-  }
-
 }
 
-/* .forma button:hover,.forma button:active,.forma button:focus {
-  background: lightskyblue;
-} */
+.forma button:hover,.forma button:active,.forma button:focus {
+  background-color: mix($clr-black, $clr-hero, 10%) !important;
+}
 .forma .message {
   margin: 15px 0 0;
   color: #b3b3b3;
