--- a/src/components/deleteDomain/deleteDomain.scss
+++ b/src/components/deleteDomain/deleteDomain.scss
@@ -9,7 +9,7 @@
 
 
 /* Comment out for original notification color*/
-.notification {
-  background-color:#0091dc !important;
-  
+
+.notification-success {
+  background-color: #0091dc !important;
 }
