--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -95,3 +95,6 @@ body {
 .message{
   margin-top: 15px !important;
 }
+.notification-error {
+  background-color: #bd362f;
+}
